@@ -52,6 +52,9 @@ Note that the following bug and feature requests are logged in GForge with relat
 **Added a new PathTooLongException and methods to check path lengths in MiscIRODSUtils, used these checks in the various path methods, especially
 the IRODSFile and DataObject and Collection access objects
 
+*[#1042] Chinese char set displayes invalid characters 
+** added new ConnectionConstants.DUMP_GEN_QUERY_OUT for optional dumping of gen query out XML messages when in log.debug mode
+
 ==Features==
 
 
